Fix styling on user page. Text-align center summary-container at 1200px media break. Remove profile h1 from _profile partial

--- a/app/assets/stylesheets/boostrap_and_override.scss
+++ b/app/assets/stylesheets/boostrap_and_override.scss
@@ -95,8 +95,18 @@ ul.nav a {
   float: right;
 }
 
+.employments p {
+  margin-left: 4.8px;
+}
+
 
 /****************** MEDIA QUERY ******************/
+
+  @media (max-width: 1200px) {
+    .summary-container {
+      text-align: center;
+    }
+  }
 
   @media (max-width: 544px) {
     .edit-description textarea {
